# html2rss

./: .gitignore  Dockerfile  README.md  app.ts  build.ts  deno.json  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: build.yaml
webroot/: index.html
